--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "asyncpg>=0.29.0",
     "alembic>=1.13.0",
+    "sqlmodel>=0.0.37",
 ]
 
 [project.optional-dependencies]
