--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "asyncpg>=0.29.0",
     "alembic>=1.13.0",
     "sqlmodel>=0.0.37",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [project.optional-dependencies]
