--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "alembic>=1.13.0",
     "sqlmodel>=0.0.37",
     "passlib[bcrypt]>=1.7.4",
-    "bcrypt>=4.1.0",
+    "bcrypt>=4.0.0,<4.1.0",
 ]
 
 [project.optional-dependencies]
