--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
+    "httpx>=0.24.0",
+    "aiosqlite>=0.19.0",
 ]
 
 [tool.pytest.ini_options]
