✅ PyJWT library installed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "sqlmodel>=0.0.37",
     "passlib[bcrypt]>=1.7.4",
     "bcrypt>=4.0.0,<4.1.0",
+    "pyjwt>=2.11.0",
 ]
 
 [project.optional-dependencies]
