--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "bcrypt>=4.0.0,<4.1.0",
     "pyjwt>=2.11.0",
+    "python-multipart>=0.0.22",
 ]
 
 [project.optional-dependencies]
