🔧 Tailwind CSS configured

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.2.1",
     "@tanstack/react-query-devtools": "^5.91.3",
     "@types/node": "^25.3.3",
     "@types/react": "^18.3.12",
