💄 Initial implementation of LoginPage 🔧 Base styles added in index.css 🔧 Adding alias to use @ insteat of relative paths

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -40,7 +40,11 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src", "vite-env.d.ts"]
 }
